[ Mac wk2 ] http/wpt/service-workers/service-worker-spinning-fetch.https.html is flaky failing. https://bugs.webkit.org/show_bug.cgi?id=207515 <rdar://problem/59329307>

Reviewed by Chris Dumez.

Source/WebCore:

When a service worker is terminated, we remove it from the map in SWContextManager.
Shortly after a new service worker may be added to the map.
In that case, previously, we were potentially trying to decrement the message count of the old service worker thread, which is confusing the new service worker thread.
Instead, use WeakPtr to decrement if the service worker thread is still valid.
Covered by existing tests.

* workers/service/context/ServiceWorkerThread.cpp:
(WebCore::ServiceWorkerThread::queueTaskToPostMessage):
(WebCore::ServiceWorkerThread::queueTaskToFireInstallEvent):
(WebCore::ServiceWorkerThread::queueTaskToFireActivateEvent):
(WebCore::ServiceWorkerThread::start):
* workers/service/context/ServiceWorkerThread.h:

LayoutTests:

* http/wpt/service-workers/service-worker-spinning-fetch.https.html:
In case service worker gets closed, fetch failure might be logged as console log message.
* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/225456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262409 268f45cc-cd09-0410-ab3c-d52691b4dbfc