Source/WebCore/workers/service/context/ServiceWorkerThread.h
@@ -32,6 +32,7 @@
 #include "ServiceWorkerIdentifier.h"
 #include "Timer.h"
 #include "WorkerThread.h"
+#include <wtf/WeakPtr.h>
 
 namespace WebCore {
 
@@ -44,7 +45,7 @@ class WorkerObjectProxy;
 struct MessageWithMessagePorts;
 struct ServiceWorkerClientIdentifier;
 
-class ServiceWorkerThread : public WorkerThread {
+class ServiceWorkerThread : public WorkerThread, public CanMakeWeakPtr<ServiceWorkerThread, WeakPtrFactoryInitialization::Eager> {
 public:
     template<typename... Args> static Ref<ServiceWorkerThread> create(Args&&... args)
     {
